# elektroid

./: .editorconfig  .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  THANKS  configure.ac  elektroid-cli.1  elektroid.1  elektroid.spec  macos-bundle.sh
.github/workflows/: ubuntu.yml
debian/: changelog  control  copyright  rules  watch
debian/patches/: fix-desktop-icon.diff  series
debian/upstream/: metadata
docs/: Gemfile  Makefile  _config.yml  api.md  cli.md  contributing.md  index.md  installation.md  libraries.md  license.md  license.md.in  packaging.md  tests.md
docs/_includes/: custom-head.html  header.html
docs/_sass/: minima.scss
docs/_sass/minima/: _base.scss
flatpak/: add-releases-to-appdata.patch  io.github.dagargo.Elektroid.yaml
man/: Makefile.am  elektroid-cli.1  elektroid.1
po/: LINGUAS  Makevars  POTFILES.in  ca.po  de.po  elektroid.pot  en.po  es.po  fr.po  pt_BR.po
res/: Makefile.am  THANKS  devices.json  elektroid.appdata.xml  elektroid.css  elektroid.desktop  elektroid.ui  elektron-devices.json  gui.css  gui.glade  io.github.dagargo.Elektroid.appdata.xml  io.github.dagargo.Elektroid.desktop  libraries.html  volca_sample_sdk-COPYING
res/elektron/: devices.json
res/microbrute/: gui.glade  microbrute.ui
res/volca_sample_2/: init_pattern.vlcsplpattb
src/: Makefile.am  audio.c  audio.h  audio_pa.c  audio_rtaudio.c  backend.c  backend.h  backend_alsa.c  backend_rtmidi.c  browser.c  browser.h  config.c  config.h  connector.c  connector.h  editor.c  editor.h  elektroid-cli.c  elektroid.c  elektroid.h  guirecorder.c  guirecorder.h  local.c  local.h  maction.c  maction.h  menu_action.c  menu_action.h  name.c  name.h  name_window.c  name_window.h  notifier.c  notifier.h  package.c  package.h  preferences.c  preferences.h  preferences_window.c  preferences_window.h  (+26 more)
src/backend/: elektron.c  elektron.h  package.c  sds.c  sds.h
src/connectors/: common.c  common.h  cz.c  cz.h  default.c  default.h  efactor.c  efactor.h  elektron.c  elektron.h  elektron_pkg.c  elektron_pkg.h  logue.c  logue.h  machinedrum.c  machinedrum.h  microbrute.c  microbrute.h  microfreak.c  microfreak.h  microfreak_sample.c  microfreak_sample.h  microfreak_utils.c  microfreak_utils.h  package.c  package.h  padkontrol.c  padkontrol.h  phatty.c  phatty.h  scala.c  scala.h  sds.c  sds.h  summit.c  summit.h  system.c  system.h  volca_sample.c  volca_sample.h  (+2 more)
src/connectors/volca_sample_sdk/: korg_syro_type.h
src/mactions/: autosampler.c  backend.c  elektron.c  microbrute.c  microfreak.c
src/menu_actions/: autosampler.c  backend.c  backend_actions.c  backend_actions.h  microbrute.c
test/: Makefile.am  PROJECT.dtprj  SOUND.dtsnd  cz_program_fs_tests.sh  data_fs_tests.sh  efactor_preset_fs_tests.sh  elektron_data_fs_tests.sh  elektron_sample_fs_tests.sh  full_test.sh  microbrute_sequence_fs_tests.sh  phatty_preset_fs_tests.sh  sample_fs_tests.sh  sds_mono16_fs_tests.sh  sds_sample16_fs_tests.sh  sds_sample_fs_tests.sh  test.sh  tests_audio.c  tests_common  tests_common.c  tests_connector.c  tests_elektron.c  tests_logue.c  tests_microfreak.c  tests_sample.c  tests_sample_ops.c  tests_scala.c  tests_utils.c  tests_volca_sample.c
test/connectors/: cz_program_fs_tests.sh  efactor_preset_fs_tests.sh  elektron_data_fs_tests.sh  elektron_project_fs_tests.sh  elektron_sample_fs_tests.sh  elektron_sound_fs_tests.sh  generic_fs_tests.sh  microbrute_sequence_fs_tests.sh  phatty_preset_fs_tests.sh  summit_multi_fs_tests.sh  summit_scala_fs_tests.sh  summit_single_fs_tests.sh  summit_tuning_fs_tests.sh  summit_wavetable_fs_tests.sh  test.sh
test/integration/: cz_program_fs_tests.sh  efactor_preset_fs_tests.sh  elektron_data_fs_tests.sh  elektron_project_fs_tests.sh  elektron_ram_fs_tests.sh  elektron_sample_fs_tests.sh  elektron_sound_fs_tests.sh  elektron_track_fs_tests.sh  elektron_track_loop_fs_tests.sh  generic_fs_tests.sh  logue_delfx_fs_tests.sh  logue_modfx_fs_tests.sh  logue_osc_fs_tests.sh  logue_revfx_fs_tests.sh  microbrute_sequence_fs_tests.sh  microfreak_ppreset_fs_tests.sh  microfreak_preset_fs_tests.sh  microfreak_pwavetable_fs_tests.sh  microfreak_wavetable_fs_tests.sh  microfreak_zpreset_fs_tests.sh  microfreak_zwavetable_fs_tests.sh  padkontrol_scene_fs_tests.sh  phatty_preset_fs_tests.sh  sds_16b-1c_fs_tests.sh  sds_16b1c_fs_tests.sh  sds_16bits1c_fs_tests.sh  sds_mono-16b_fs_tests.sh  sds_mono16_fs_tests.sh  summit_multi_fs_tests.sh  summit_scala_fs_tests.sh  summit_single_fs_tests.sh  summit_tuning_fs_tests.sh  summit_wavetable_fs_tests.sh  system_all_fs_tests.sh  test.sh  volca_sample_2_pattern_fs_tests.sh  volca_sample_2_sample_fs_tests.sh  volca_sample_2_sample_loop_fs_tests.sh  volca_sample_2_slice_fs_tests.sh
test/res/: CZ-101 internal 01 src.syx  CZ-101 program.syx  Eventide Factor New Name.syx  Eventide Factor Preset.syx  Moog Little Phatty New Name.syx  SOUND.data  SOUND.dt-data  SOUND.dtdata  sequence.mbseq  sequence_back.mbseq
test/res/connectors/: CZ-101 panel src.syx  Eventide Factor New Name.syx  PROJECT.dtdata  SOUND.dtdata  cz_program.data.back  devices.json  elektron_pattern_86_bpm.syx  elektron_project.data  elektron_sound.data  logue1.ntkdigunit  logue1.syx  logue1_back.syx  logue2.ntkdigunit  logue2.syx  logue2_back.syx  logue3.ntkdigunit  logue3.syx  logue3_back.syx  logue4.ntkdigunit  logue4.syx  logue4_back.syx  logue_delfx.data  logue_modfx.data  logue_osc.data  logue_revfx.data  logue_revfx.data.back  microbrute_sequence.data.back  microfreak.mfs  microfreak.mfsz  microfreak.mfw  microfreak.mfwz  microfreak_preset.data  microfreak_preset.data.back  microfreak_pwavetable.data  microfreak_pwavetable.data.back  microfreak_wavetable.data.back  microfreak_zpreset.data  microfreak_zwavetable.data  padkontrol_scene.data.back  phatty_preset.data  (+15 more)
test/res/scala/: TET.scl  no_notes.scl  perfect_5th.scl  success.scl  too_many_notes.scl  unmatching_notes.scl
